--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.2.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-motion": "^1.1.0"
   }
 }
